WindGroup Dev/src/objects/Bank_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Name__c</fullName>
        <label>Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Master</label>
        <referenceTo>COA_Master__c</referenceTo>
        <relationshipLabel>Bank Information</relationshipLabel>
        <relationshipName>Bank_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Bank Information</relationshipLabel>
        <relationshipName>Bank_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Swift_Code__c</fullName>
        <label>Swift Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Information</label>
    <nameField>
        <displayFormat>BANK-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>